Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68507

Qt Designer: Crash when using `Morph into` with buddy property set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9, 5.11.1
    • 5.10.0
    • Tools: Designer
    • None
    • Windows 10 as well as Ubuntu 18.04 both 64bit.

      QtCreator 4.6.1
    • 548a75049efaa3f9b3087016e3e36cc9b4f23e2e (qttools/5.11, 28.5.2018, 5.11.1), 5d57a3fb9e9a34413e85a733e45efc51511c4533 (qtools/5.9, 29.5.2018, 5.9.7)

      `Morph into` crashes QtCreator when object to be morphed has QLabel buddy.

       

      Steps to reproduce:

      1. Create new .ui file. -> File -> New file or project; Files And Classes -> Qt -> Qt Designer Form -> Choose; Dialog without buttons -> Next; Next; Finish.
      2. Add QLabel.
      3. Add QSpinBox
      4. Edit Buddies
      5. Buddy label to spinbox widget.
      6. Edit Widgets(F3)
      7. Morph spinbox to QTimeEdit. -> Right click on spinbox widget -> Morph into -> QTimeEdit.

      Qt Creator will crash.

        1. qtbug68507.ui
          0.9 kB
          Friedemann Kleint
        2. qtbug68507_stack.txt
          32 kB
          Friedemann Kleint
        3. qtbug68507_diag.diff
          5 kB
          Friedemann Kleint
        4. qtbug68507_log.txt
          1 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            boris.barbulovski Boris Barbulovski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes