Qt Designer: Fix crash when morphing widgets with buddies

Bail out of PropertyEditor::setObject() when no form window
can be found for the current widget, which can happen when
setting the buddy property in morph macro sequences.

Task-number: QTBUG-68507
Change-Id: I61955121d57e1c18e2ccf93d63e51d2df24f0827
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>