src/designer/src/components/propertyeditor/propertyeditor.cpp
@@ -911,6 +911,8 @@ void PropertyEditor::setObject(QObject *object)
     m_object = object;
     m_propertyManager->setObject(object);
     QDesignerFormWindowInterface *formWindow = QDesignerFormWindowInterface::findFormWindow(m_object);
+    if (Q_UNLIKELY(formWindow == nullptr)) // QTBUG-68507, can happen in Morph Undo macros with buddies
+        return;
     FormWindowBase *fwb = qobject_cast<FormWindowBase *>(formWindow);
     const bool idIdBasedTranslation = fwb && fwb->useIdBasedTranslations();
     const bool idIdBasedTranslationUnchanged = (idIdBasedTranslation == DesignerPropertyManager::useIdBasedTranslations());
